--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -36,6 +36,11 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:orientation="vertical">
             <!--****************************************Bottom sheet content********************************************-->
+            <ScrollView
+                android:id="@+id/scrollView1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight = "1">
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -78,18 +83,27 @@
                 </android.support.constraint.ConstraintLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:background="#fff">
                     <fragment
                         android:id="@+id/char_list"
                         android:name="com.example.mysoftstore.CharFragment"
                         android:layout_width="match_parent"
-                        android:layout_height="200dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="30dp"/>
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:layout_marginTop="15dp"
+                        />
 
                 </LinearLayout>
+
             </LinearLayout>
+            </ScrollView>
             <!--*************************************************Bottom sheet button****************************************************-->
             <LinearLayout
                 android:layout_width="match_parent"
