--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -33,6 +33,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
             </android.support.constraint.ConstraintLayout>
 
+
         </android.support.v7.widget.Toolbar>
         <EditText
             android:id="@+id/filterText"
@@ -45,7 +46,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
-
+<TextView
+    android:id="@+id/ttt"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
     </LinearLayout>
     <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
