--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -105,6 +105,39 @@
             android:background="#fff"
             android:text="@string/sign_up"
             android:textAllCaps="false" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/im_user"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:gravity="bottom"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:textColor="@color/midle"
+                android:layout_marginBottom="10dp"
+                android:background="#fff"
+                android:text="@string/im_user"
+                android:textAllCaps="false" />
+            <TextView
+                android:id="@+id/im_admin"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:gravity="bottom"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:textColor="@color/midle"
+                android:layout_marginBottom="10dp"
+                android:background="#fff"
+                android:text="@string/im_admin"
+                android:textAllCaps="false" />
+        </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
