--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/account"
-        android:title="@string/myAccount"/>
-    <item
-        android:id="@+id/settings"
-        android:title="@string/Settings"/>
-    <item
         android:id="@+id/mycart"
-        android:title="@string/favorite"/>
+        android:title="@string/myCart"/>
     <item
         android:id="@+id/aboutUs"
         android:title="@string/aboutUs"/>
     <item
         android:id="@+id/support"
         android:title="@string/support"/>
+    <item
+        android:id="@+id/out"
+        android:title="@string/go_out"/>
 </menu>
