--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -135,6 +135,9 @@
         android:background="@drawable/action_bar_back"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
+        <TextView
+            android:text="@string/softstore"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </android.support.v7.widget.Toolbar>
 </android.support.design.widget.CoordinatorLayout>
