--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -2,14 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/mycart"
+        android:icon="@drawable/scart"
         android:title="@string/myCart"/>
     <item
         android:id="@+id/aboutUs"
+        android:icon="@drawable/logo"
         android:title="@string/aboutUs"/>
     <item
         android:id="@+id/support"
+        android:icon="@drawable/help"
         android:title="@string/support"/>
     <item
         android:id="@+id/out"
+        android:icon="@drawable/logout"
         android:title="@string/go_out"/>
 </menu>
