--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -25,13 +25,15 @@
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <Button
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:background="@drawable/sort"
                 android:onClick="onSort"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
@@ -39,6 +41,7 @@
     </android.support.v7.widget.Toolbar>
     <EditText
         android:id="@+id/filterText"
+        android:textColorHighlight="@color/blue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
