--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,11 +4,11 @@
     <color name="colorPrimaryDark">#000</color>
     <color name="textColorPrimary">#d44</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="blue">#4286f4</color>
+    <color name="blue">#d5124f</color>
 
     <color name="white">#fff</color>
-    <color name="black">#000</color>
-    <color name="gray">#707172</color>
-    <color name="midle">#15142A</color>
+    <color name="black">#707172</color>
+    <color name="gray">#d5124f</color>
+    <color name="midle">#d5124f</color>
     <color name="helpert">#A2A2A2</color>
 </resources>
